# rust-lib

./: .gitignore  Cargo.toml  LICENSE  README.md  run
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug-report.md  epic.md  feature-request.md  task.md
.github/workflows/: rust.yml
docs/: CONTRIBUTING.md  SECURITY.md  release-policy.md
internal/: README.md
internal/shapely-macros/: Cargo.toml
native-only/shapely-macros/: Cargo.toml
src/automata/: Cargo.toml
src/automata/src/: alphabet.rs  dfa.rs  nfa.rs  pattern.rs  state.rs  symbol.rs
src/automata/tests/: automata_exports.rs
src/data/: Cargo.toml
src/enso-prelude/: Cargo.toml
src/enso-prelude/src/: clone.rs  lib.rs  macros.rs
src/enso-shapely/: Cargo.toml
src/enso-shapely/impl/: Cargo.toml
src/enso-shapely/macros/: Cargo.toml
src/enso-shapely/src/: generator.rs  lib.rs  shared.rs
src/generics/: Cargo.toml
src/lazy-reader/: Cargo.toml
src/lazy-reader/src/: lib.rs
src/logger/: Cargo.toml
src/logger/src/: enabled.rs
src/macro-utils/: Cargo.toml
src/macro-utils/src/: lib.rs
src/optics/: Cargo.toml
src/prelude/: Cargo.toml
src/prelude/src/: lib.rs  option.rs  vec.rs
src/prelude/src/data/: non_empty_vec.rs
src/shapely/: Cargo.toml
src/shapely/impl/: Cargo.toml
src/shapely/macros/: Cargo.toml
src/shapely/src/: generator.rs  lib.rs  shared.rs
