[workspace]

members = [
    "native-only/shapely-macros",
    "src/enso-macro-utils",
    "src/enso-prelude",
    "src/enso-shapely"
]

[profile.dev]
opt-level = 0
lto       = false
debug     = true

[profile.release]
opt-level = 3
lto       = true
debug     = false

[profile.bench]
opt-level = 3
lto       = true
debug     = false

[profile.test]
opt-level = 0
lto       = false
debug     = true

