[workspace]

members = [
    "src/enso-macro-utils",
    "src/enso-prelude",
    "src/enso-shapely/impl",
    "src/enso-shapely/macros"
]

[profile.dev]
opt-level = 0
lto       = false
debug     = true

[profile.release]
opt-level = 3
lto       = true
debug     = false

[profile.bench]
opt-level = 3
lto       = true
debug     = false

[profile.test]
opt-level = 0
lto       = false
debug     = true

