[workspace]

members = [
    "src/automata",
    "src/data",
    "src/generics",
    "src/lazy-reader",
    "src/logger",
    "src/macro-utils",
    "src/optics",
    "src/prelude",
    "src/shapely/impl",
    "src/shapely/macros",
]

[profile.dev]
opt-level = 0
lto       = false
debug     = true

[profile.release]
opt-level = 3
lto       = true
debug     = false

[profile.bench]
opt-level = 3
lto       = true
debug     = false

[profile.test]
opt-level = 0
lto       = false
debug     = true

