[package]
name    = "enso-logger"
version = "0.1.1"
authors = ["Enso Team <contact@luna-lang.org>"]
edition = "2018"

description  = "An efficient logger for writing applications in Rust."
readme       = "README.md"
homepage     = "https://github.com/enso-org/rust-lib/src/logger"
repository   = "https://github.com/enso-org/rust-lib"
license-file = "../../LICENSE"

keywords = ["logging"]
categories = ["development-tools::debugging"]

publish = true

[lib]

[features]
default = []

[dependencies]
enso-prelude = { version = "0.1.1" , path = "../prelude"      }
enso-shapely = { version = "0.1.1" , path = "../shapely/impl" }
wasm-bindgen = { version = "=0.2.58", features = ["nightly"]  }

[dependencies.web-sys]
version = "0.3.4"
features = ['console']
